# s3topostgres

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  journal.py  logger.py  main.py  models.py  processor.py  s3_client.py  schemas.py
app/api/: endpoints.py
app/migrations/: env.py
app/migrations/versions/: 0fe52fa81506_user_ip_and_techical_data_tables_created.py  2add88ca89e2_change_primary_key_to_uuid.py  3e41873dea3d_remove_indexes_from_mpevent.py  43647dddc40c_user_locations_table_created.py  5fbc1cfb5c4c_mobile_devise_data_deleted_from_mp.py  a8c6dcc8c3ae_mobile_devices_table_created.py  ad247ff99d82_deleted_empty_columns.py  c3e87f7b4a02_user_ip_and_techical_data_deleted_from_.py  cf5a9692af51_update_models_id_as_uuid_and_created_at_.py  d5386309b5cb_user_locations_data_deleted_from_mp.py  da342dc39914_new_columns.py  fa5adb520eae_initial_create_web_and_mp_tables.py
