[project]
name = "s3topostgres"
version = "0.1"
description = "Мигрирует файлы из S3 в PostgreSQL"
authors = [
    {name = "alevch10",email = "levchenko.an98@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"

packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.34.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"  # Для API форм
python-dotenv = "^1.0.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
